--- a/backend/package.json
+++ b/backend/package.json
@@ -24,5 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
